--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Vite App</title>
     <script type="module" crossorigin src="/assets/index.27ac2ca8.js"></script>
     <link rel="modulepreload" href="/assets/vendor.fa390c61.js">
+    <link href="/assets/form.html"
     <link rel="stylesheet" href="/assets/index.4d4ddd42.css">
   </head>
   <body>
